--- a/src/app/component/profile/profile.component.less
+++ b/src/app/component/profile/profile.component.less
@@ -24,11 +24,8 @@
   display: flex;
 }
 .info-name {
-  font: 28px "sans-serif";
-  font-weight: 500;
+  font-size: 28px;
 
-  line-height: 24px;
-  letter-spacing: -.24px;
   word-break: break-all;
   margin-bottom: 0;
 }
@@ -54,21 +51,13 @@
 
 .info-strip {
   color: @black;
-  font: 16px "sans-serif";
-
-  font-weight: 600;
-  line-height: 20px;
-  letter-spacing: -.096px;
   padding: 20px 0;
 }
 
 .info-profile {
-  font: 14px "sans-serif";
 
-  font-weight: 500;
-  line-height: 20px;
   word-break: break-all;
-  letter-spacing: -.096px;
+
   padding: 10px;
 
 }
