--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -1,89 +1,49 @@
-<div class="events__table">
-  <div class="events__table-strip">
-    <label class="events__table-strip_label">
+<div class="events">
+  <div class="events__research">
+    <label class="events__research-label">
       <svg class="icon-search">
         <use xlink:href="./assets/images/search.svg#icon-search"></use>
       </svg>
-      <input class="events__table-strip-enter_filter" type="text" [formControl]="filter" placeholder="Enter name">
+      <input class="events__research-filter" type="text" [formControl]="filter" placeholder="Enter name">
     </label>
     <label>
-      <select class="events__table-strip-enter_filter" [(ngModel)]="checkEvent">
+      <select class="events__research-filter" [(ngModel)]="checkEvent">
         <option [value]="''" >All area</option>
         <option>IT</option>
         <option>QA</option>
       </select>
     </label>
-    <button class="table-button events__table-strip-button" (click)="addIncident()">{{ 'INCIDENTS.ADDEVENT' | translate }}</button>
+    <button class="table-button events__research-button" (click)="addIncident()">{{ 'INCIDENTS.ADDEVENT' | translate }}</button>
   </div>
-<!--  <ul class="events__table-header">
-    <li class="events__table-header-column"></li>
-    <li class="events__table-header-column">{{ 'INCIDENTS.NAME' | translate }}</li>
-    <li class="events__table-header-column">{{ 'INCIDENTS.ASSIGNEE' | translate }}</li>
-    <li class="events__table-header-column hidden">{{ 'INCIDENTS.AREA' | translate }}</li>
-    <li class="events__table-header-column hidden">{{ 'INCIDENTS.STARTDATE' | translate }}</li>
-    <li class="events__table-header-column hidden">{{ 'INCIDENTS.DUEDATE' | translate }}</li>
-    <li class="events__table-header-column hidden">{{ 'INCIDENTS.STATUS' | translate }}</li>
-  </ul>-->
+  <div class="events__content">
+    <div class="events__content-item" *ngFor="let incident of filteredStates$| areaFilter:checkEvent | async ;"
+         (click)="editIncident(incident._id)" appHover>
+      <span class="events__content-title">{{incident.name}}</span>
+      <span class="events__content-name">{{incident.assignee}}</span>
+      <span class="events__content-name">{{incident.area}}</span>
+      <span class="events__content-name">{{incident.startDate | date: 'dd-MM-yyyy'}} {{incident.dueDate | date: 'dd-MM-yyyy'}}</span>
+      <span class="events__content-name">{{incident.status}}</span>
+      <span class="events__content-status">
 
-<div class="events__table-body-content">
-  <div class="events__table-body-item" *ngFor="let incident of filteredStates$| areaFilter:checkEvent | async ;"
-       (click)="editIncident(incident._id)" appHover>
-        <span class="">
+        <svg class="inline-svg-icon inline-svg-icon-closed" *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
+          <use xlink:href="./assets/images/sprite.svg#status"></use>
+        </svg>
 
-      <svg class="inline-svg-icon inline-svg-icon-closed" *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
+        <svg class="inline-svg-icon inline-svg-icon-info" *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
+          <use xlink:href="./assets/images/sprite.svg#status"></use>
+        </svg>
 
-      <svg class="inline-svg-icon inline-svg-icon-info" *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
+        <svg class="inline-svg-icon inline-svg-icon-check" *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
+          <use xlink:href="./assets/images/sprite.svg#status"></use>
+        </svg>
 
-      <svg class="inline-svg-icon inline-svg-icon-check" *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
+        <svg class="inline-svg-icon inline-svg-icon-open" *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
+          <use xlink:href="./assets/images/sprite.svg#status"></use>
+        </svg>
 
-      <svg class="inline-svg-icon inline-svg-icon-open" *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
-
-    </span>
-    <span class="">{{incident.name}}</span>
-    <span class="">{{incident.assignee}}</span>
-    <span class="">{{incident.area}}</span>
-    <span class="">{{incident.startDate | date: 'dd-MM-yyyy'}}</span>
-    <span class="">{{incident.dueDate | date: 'dd-MM-yyyy'}}</span>
-    <span class="">{{incident.status}}</span>
+      </span>
+    </div>
   </div>
-</div>
-  <!--<div class="events__table-body-row" *ngFor="let incident of filteredStates$| areaFilter:checkEvent | async ;"
-       (click)="editIncident(incident._id)" appHover>
-
-    <span class="events__table-body-column">
-
-      <svg class="inline-svg-icon inline-svg-icon-closed" *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
-
-      <svg class="inline-svg-icon inline-svg-icon-info" *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
-
-      <svg class="inline-svg-icon inline-svg-icon-check" *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
-
-      <svg class="inline-svg-icon inline-svg-icon-open" *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
-        <use xlink:href="./assets/images/sprite.svg#status"></use>
-      </svg>
-
-    </span>
-    <span class="events__table-body-column">{{incident.name}}</span>
-    <span class="events__table-body-column">{{incident.assignee}}</span>
-    <span class="events__table-body-column hidden">{{incident.area}}</span>
-    <span class="events__table-body-column hidden">{{incident.startDate | date: 'dd-MM-yyyy'}}</span>
-    <span class="events__table-body-column hidden ">{{incident.dueDate | date: 'dd-MM-yyyy'}}</span>
-    <span class="events__table-body-column hidden">{{incident.status}}</span>
-  </div>-->
 </div>
 <router-outlet></router-outlet>
 
