--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -5,7 +5,10 @@
     width: 95%;
     margin: auto;
     background: @white;
-    font: 16px "sans-serif";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
+    line-height: 1.5;
+    font-size: 16px;
 
     @media (max-width: 575px) {
       width: 100%;
