--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,7 @@
 body{
-
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
+  line-height: 1.5;
+  font-size: 16px;
   background-color: fade(lightgray,8%);
 }
