--- a/src/app/process/process.component.less
+++ b/src/app/process/process.component.less
@@ -1,17 +1,66 @@
 .process {
+  width: 100%;
+  margin: auto;
+  @media (max-width: 575px) {
+    width: 100%;
+    margin: auto;
+  }
 
   &__table {
-    width: 70%;
-    margin: auto;
-    @media (max-width: 575px) {
-      width: 100%;
-      margin: auto;
-    }
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
 
-    &-block {
-      width: 100%;
-      background-size: contain;
-    }
 
+    &-row {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+
+      margin: 20px 50px;
+      padding: 10px;
+      width: 40%;
+
+      color: #ADB9CA;
+      background-color: #3D4D65;
+      /*background-color: #54657E;*/
+    }
+    &-status {
+      position: absolute;
+      width: 30px;
+      height: 100%;
+      top: 0;
+      left: -30px;
+      z-index: 1;
+
+    }
   }
+
+}
+
+.status {
+  &-open {
+    background-color: #04BE5B;
+  }
+  &-closed {
+    background-color: #D2335C;
+  }
+  &-info {
+    background-color: #FF9948;
+  }
+  &-check {
+    background-color: #A93ABA;
+  }
+}
+.icon-status {
+  position: absolute;
+  top: 40%;
+  padding: 0 3px;
+  height: 24px;
+  width: 24px;
+  stroke-width: 1;
+  fill: #FFFFFF;
+}
+.icon-closed {
+  padding: 0 6px;
 }
