--- a/src/styles.less
+++ b/src/styles.less
@@ -3,5 +3,5 @@ body{
   Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
   line-height: 1.5;
   font-size: 16px;
-  background-color: fade(lightgray,8%);
+  background-color: #181830;
 }
