--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -5,6 +5,19 @@
 @lightgray: #d3d3d3;
 @hex: #d81818;
 
+@2gray: #2c3c52;
+@3gray: #3D4D65;
+@4gray: #54657E;
+@5gray: #8493A8;
+@6gray: #ADB9CA;
+@7gray: #CAD3DF;
+@8gray: #ECEFF4;
+
+@green: #04BE5B;
+@red: #D2335C;
+@orange: #FF9948;
+@purple: #A93ABA;
+@blue: #0082D5;
 
 ul[class],
 ol[class] {
@@ -75,7 +88,7 @@ input.ng-touched.ng-valid{
   stroke: currentColor;
   fill: currentColor;
   &-earth:hover {
-    fill: cornflowerblue;
+    fill: @blue;
   }
   &-pencil {
     fill: currentColor;
