--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -19,7 +19,8 @@
     width: auto;
     margin: 10px;
     flex-direction: column;
-    background-color: @white;
+    background-color: @3gray;
+    color: @6gray;
     background-clip: padding-box;
     border: 1px solid rgba(0,0,0,.2);
     border-radius: .3rem;
@@ -61,6 +62,8 @@
     margin-bottom: 5px;
     padding: 5px;
     outline: none;
+    background-color: @2gray;
+    color: @6gray;
   }
   &-action{
     display: flex;
@@ -68,6 +71,8 @@
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+    background-color: @2gray;
+    color: @6gray;
     outline: none;
     &-two {
       display: flex;
@@ -75,6 +80,8 @@
       margin-top: 5px;
       margin-bottom: 5px;
       padding: 5px;
+      background-color: @2gray;
+      color: @6gray;
       border-bottom: 1px solid @lightgray;
     }
   }
