--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,34 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>Project</title>
-</head>
 <header class="header">
+
   <div class="header__name">{{ 'MAIN.PROJECT' | translate }}</div>
-  <div class="tab">
-    <button routerLink="/main/events" routerLinkActive="active" class="tab__button">{{ 'MAIN.EVENTS' | translate }}</button>
-    <button routerLink="/main/process" routerLinkActive="active" class="tab__button">{{ 'MAIN.PROCESS' | translate }}</button>
-    <button routerLink="/main/users" routerLinkActive="active" class="tab__button">{{ 'MAIN.USERS' | translate }}</button>
+  <div class="nav">
+    <a class="nav__link" routerLink="/main/events" routerLinkActive="active">{{ 'MAIN.EVENTS' | translate }}</a>
+    <a class="nav__link" routerLink="/main/process" routerLinkActive="active">{{ 'MAIN.PROCESS' | translate }}</a>
+    <a class="nav__link" routerLink="/main/users" routerLinkActive="active">{{ 'MAIN.USERS' | translate }}</a>
   </div>
+
   <div class="header__profile">
-    <svg class=" icon icon-earth header__lang" (click)="changeLocale()">
+
+    <svg class="icon icon-earth header__profile-item" (click)="changeLocale()">
       <use xlink:href="./assets/images/earth.svg#icon-earth"></use>
     </svg>
-    <div class="header__profile-icon">
-      <svg class="icon header__lang">
-        <use xlink:href="./assets/images/user.svg#icon-user"></use>
-      </svg>
-      <span *ngIf="authService.isLoggedIn()" class="header__lang">{{user.surname}}</span>
-      <a *ngIf="!authService.isLoggedIn()" class="tab__button header__lang" href="/main/auth">{{ 'MAIN.LOGIN' | translate }}</a>
-    </div>
-    <button *ngIf="authService.isLoggedIn()" class="tab__button header__lang" (click)="logoutUser()">{{ 'MAIN.EXIT' | translate }}</button>
+    <svg class="icon header__profile-item">
+      <use xlink:href="./assets/images/user.svg#icon-user"></use>
+    </svg>
+
+    <span *ngIf="authService.isLoggedIn()" class="header__profile-item">{{user.surname}}</span>
+    <a *ngIf="!authService.isLoggedIn()" class="header__profile-btn" routerLink="/main/auth">{{ 'MAIN.LOGIN' | translate }}</a>
+    <button *ngIf="authService.isLoggedIn()" class="header__profile-btn" (click)="logoutUser()">{{
+    'MAIN.EXIT' |
+      translate }}</button>
 
   </div>
+
 </header>
+
 <main>
   <flash-messages></flash-messages>
 </main>
-</html>
+
 <router-outlet></router-outlet>
 
