--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -1,68 +1,97 @@
 @import "./../../styles/variables";
 .header {
-  background: @white;
-  height: 40px;
-  position: relative;
-  margin-bottom: 10px;
   display: flex;
-  border-top: 1px solid @lightgray;
-  border-bottom: 1px solid @lightgray;
+  position: relative;
+  height: 40px;
+  margin-bottom: 20px;
+
+  background-color: @2gray;
+
   outline: none;
+  align-items: center;
+
   &__name {
-    background: @black;
-    color: @white;
-    align-items: center;
-    display: inline-block;
-    padding: 10px 0;
+    padding: 5px 10px;
     font-size: 20px;
+
+    color: @7gray;
   }
   &__profile {
     display: flex;
+    flex-direction: row;
     position: absolute;
-    right: 2%;
-   /* flex-direction: column;*/
-    align-items: center;
-    padding: 0 20px;
-    &-icon {
-      display: flex;
-      flex-direction: row;
+    right: 0;
+
+    &-item {
+      padding: 5px;
+
+      color: @7gray;
+      fill: @7gray;
+    }
+    &-btn {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      outline: none;
+      border: 0;
+      padding: 10px 30px;
+      margin-left: 5px;
+      height: auto;
+
+      font-family: inherit;
+      font-size: 15px;
+      font-weight: 500;
+
+      color: @7gray;
+      background-color: @3gray;
+
+      transition: background .1s linear;
+
+      &:hover {
+        background-color: @blue;
+        color: @white;
+      }
     }
   }
-  &__lang {
-    font: 18px "Roboto";
-    padding: 5px;
 
-  }
 }
 
-.tab {
-  background: @white;
-  padding: 0 20px;
+.nav {
   display: flex;
+  padding: 0 20px;
+
   @media (max-width: 575px) {
     width: 100%;
     margin: auto;
   }
 
-  &__button {
-    color: @black;
-    border: solid @white;
-    background: @white;
-   /* margin: 5px;*/
-    padding: 5px;
-    display: inline-block;
-    background: rgba(255, 255, 255, 0.2);
-    font: 18px "Roboto";
+  &__link {
+    padding: 5px 10px;
+    height: auto;
+
+    font-family: inherit;
+    font-size: 18px;
+    font-weight: 400;
+
+    color: @7gray;
     text-align: center;
     text-decoration: none;
     outline: none;
+
+    transition: background .1s linear;
+
+    &:hover {
+      background-color: @blue;
+      color: @white;
+    }
+
+    &.active {
+      border-bottom: 2px solid @blue;
+    }
   }
-  &__button:hover {
-       color: cornflowerblue;
-     }
-.active {
-    border-bottom: 2px solid cornflowerblue;
-  }
+
+
+
 
 }
 
