--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,9 @@
 <div class="users__table">
-  <div class="users__table-strip">
-    <button class="table-button users__table-button" (click)="addUser()">{{ 'USERS.ADDUSER' | translate }}</button>
+  <div class="users__research">
+    <button class="btn-event" (click)="addUser()">{{ 'USERS.ADDUSER' | translate }}</button>
   </div>
+
+ <!-- <div class="users__table-strip"></div>-->
 <div class="users__table-main">
   <ul class="users__table-header">
     <li class="users__table-header-column"></li>
