--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -1,10 +1,18 @@
 @import "./../../styles/variables";
 .users {
 
+  &__research {
+    border-radius: 5px;
+
+    position: relative;
+    background-color: @3gray;
+  }
   &__table {
-    width: 95%;
-    margin: auto;
-    background: @white;
+/*    width: 95%;
+    margin: auto;*/
+    padding: 10px 0;
+    border-radius: 5px;
+    background: @2gray;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
     line-height: 1.5;
@@ -16,8 +24,8 @@
       font-size: 14px;
     }
     &-main {
-      width: 60%;
-      margin: auto;
+/*      width: 100%;
+      margin: auto;*/
     }
     &-strip {
       padding: 20px 0;
