--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -1,5 +1,5 @@
 @import "./../../../styles/variables";
-.incidents__form {
+.events__form {
   position: fixed;
   top: 0;
   right: 0;
@@ -22,27 +22,23 @@
     background-color: @3gray;
     color: @6gray;
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.2);
+
     border-radius: .3rem;
     outline: 0;
 
     @media (min-width: 576px) {
       max-width: 500px;
-      margin: 30px auto;
+      margin: 80px auto;
       box-shadow: 0 5px 15px rgba(0,0,0,.5);
     }
   }
+
   &-body{
     position: relative;
     flex: 1 1 auto;
-    padding: 15px;
+    padding: 30px;
     overflow: auto;
-  }
-  .form-group{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-bottom: 10px;
+    border: 10px solid @4gray;
   }
 
 }
@@ -51,6 +47,10 @@
   pointer-events: auto;
   overflow-y: auto;
 }
+
+
+
+
 .form-control {
   &-label {
     display: flex;
@@ -92,3 +92,23 @@
   display: flex;
   flex-direction: column;
 }
+
+.events__header {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  top: -40px;
+  z-index: 1;
+
+  background-color: @41gray;
+
+  &-title {
+    padding: 10px 20px;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: 500;
+
+    color: @white;
+  }
+}
+
