--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -1,38 +1,29 @@
 @import "./../../styles/variables";
 .users {
+  outline: none;
+
+  color: @6gray;
 
   &__research {
     border-radius: 5px;
-
+    height: 48px;
     position: relative;
     background-color: @3gray;
   }
   &__table {
-/*    width: 95%;
-    margin: auto;*/
     padding: 10px 0;
     border-radius: 5px;
     background: @2gray;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
     line-height: 1.5;
     font-size: 16px;
+
+    margin: 20px;
+    border: 3px solid @blue;
 
     @media (max-width: 575px) {
       width: 100%;
       margin: auto;
       font-size: 14px;
-    }
-    &-main {
-/*      width: 100%;
-      margin: auto;*/
-    }
-    &-strip {
-      padding: 20px 0;
-      position: relative;
-    }
-    &-button {
-      position: absolute;
     }
 
     &-header {
