--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
   <div class="header__name">{{ 'MAIN.PROJECT' | translate }}</div>
   <div class="nav">
     <a class="nav__link" routerLink="/main/events" routerLinkActive="active">{{ 'MAIN.EVENTS' | translate }}</a>
-    <a class="nav__link" routerLink="/main/process" routerLinkActive="active">{{ 'MAIN.PROCESS' | translate }}</a>
+<!--    <a class="nav__link" routerLink="/main/process" routerLinkActive="active">{{ 'MAIN.PROCESS' | translate }}</a>-->
     <a class="nav__link" routerLink="/main/users" routerLinkActive="active">{{ 'MAIN.USERS' | translate }}</a>
   </div>
 
