--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,33 +1,30 @@
 <div class="users">
   <div class="users__research">
-    <button class="btn-event" (click)="addUser()">{{ 'USERS.ADDUSER' | translate }}</button>
+    <div class="users__header">
+      <div class="users__header-column"></div>
+      <div class="users__header-column">{{ 'USERS.USER' | translate }}</div>
+      <div class="users__header-column">{{ 'USERS.POSITION' | translate }}</div>
+      <div class="users__header-column"></div>
+    </div>
+    <button class="btn-event users__research-btn" (click)="addUser()">{{ 'USERS.ADDUSER' | translate }}</button>
   </div>
   <div class="users__table">
-    <ul class="users__table-header">
-      <li class="users__table-header-column"></li>
-      <li class="users__table-header-column">{{ 'USERS.USER' | translate }}</li>
-      <li class="users__table-header-column">{{ 'USERS.POSITION' | translate }}</li>
-      <li class="users__table-header-column"></li>
-
-    </ul>
-
-    <div class="users__table-body-row" *ngFor="let user of users$ | async;">
-      <span class="users__table-body-column">
+    <div class="users__table-row" *ngFor="let user of users$ | async;">
+      <div class="users__table-column">
         <svg class="icon icon-pencil" (click)="editUser(user._id)">
           <use xlink:href="./assets/images/profile.svg#icon-profile"></use>
         </svg>
-      </span>
-      <span class="users__table-body-column">
+      </div>
+      <div class="users__table-column">
         {{user.surname}}
-      </span>
-      <span class="users__table-body-column">
+      </div>
+      <div class="users__table-column">
         {{user.position}}
-      </span>
-      <span class="users__table-body-column">
+      </div>
+      <div class="users__table-column">
         <button class="table-button-delete" (click)="delete(user._id)"></button>
-      </span>
+      </div>
     </div>
-
   </div>
 </div>
 
