--- a/src/app/field/field.component.html
+++ b/src/app/field/field.component.html
@@ -1,28 +1,29 @@
-<div class="process__table">
-<div [formGroup]="form" class="edit-user">
-  <label class="form-control-label" [attr.for]="field.id">{{field.label}}</label>
+<form [formGroup]="form">
+  <label class="input-label" [attr.for]="field.id">{{field.label}}</label>
 
   <div [ngSwitch]="field.controlType">
-    <section>
-      <input class="form-control-action" *ngSwitchCase="'textbox'" [formControlName]="field.id" [id]="field.id" type="text">
+    <section >
+      <input class="input-action" *ngSwitchCase="'textbox'" [formControlName]="field.id" [id]="field.id" type="text">
     </section>
+
     <section>
-      <input class="form-control-action" *ngSwitchCase="'date'" [formControlName]="field.id" [id]="field.id" type="date">
+      <input class="input-action" *ngSwitchCase="'date'" [formControlName]="field.id" [id]="field.id" type="date">
     </section>
+
     <section *ngSwitchCase="'dropdown'">
-      <select [id]="field.id" [formControlName]="field.id">
+      <select class="input-action" [id]="field.id" [formControlName]="field.id">
         <option *ngFor="let opt of field.options" [value]="opt.code">{{opt.value}}</option>
       </select>
     </section>
 
     <section *ngSwitchCase="'radioGroup'">
             <span *ngFor="let opt of field.options">
-            <input  type="radio" [value]='opt.code' [formControlName]="field.id">{{opt.value}}
+            <input class="input-action" type="radio" [value]='opt.code' [formControlName]="field.id">{{opt.value}}
             </span>
     </section>
   </div>
 
   <div class="validtext" *ngIf="!isValid">{{field.errorMessage}} is required</div>
-</div>
-</div>
+</form>
+
 
