--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -42,19 +42,19 @@ ol[class] {
   color: @white;
 }
 input.ng-touched.ng-invalid{
-  border:solid @hex 2px;
+  border: 2px solid @red;
 }
 input.ng-touched.ng-valid{
-  border:solid @lightgray 2px;
+  border: 2px solid @green;
 }
 .validtext {
   width: 100%;
-  color: @black;
-  background-color: @hex;
+  color: @white;
+  background-color: @red;
   text-align: center;
   padding: 5px 0;
-  border-radius: 6px;
-  margin-bottom: 5px;
+  border-radius: 5px;
+  margin-top: 5px;
 }
 
 .table-button {
@@ -72,6 +72,11 @@ input.ng-touched.ng-valid{
   top: 0;
   outline: none;
   &-delete {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: 0;
     display: block;
     border-radius: 50%;
     background: @hex;
@@ -126,4 +131,7 @@ input.ng-touched.ng-valid{
     background-color: @blue;
     color: @white;
   }
+
 }
+
+
